Todo1: Done&setting

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "<in63119@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "hardhat": "^2.19.1"
+    "@openzeppelin/contracts": "^5.0.0",
+    "hardhat": "^2.19.1",
+    "prettier-plugin-solidity": "^1.2.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
